2021-02-07  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvipos.c:
	Show bug report address in usage.
	* dvipos.test, tests/play.{dvi,loc,pos}, tests/ptmr.tfm, Makefile.am:
	Add a new test.

2018-01-27  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* tfm.c, utils.[ch]: Support new JFM spec (3-byte characters
	in TYPE > 0). This also avoids a segmentation fault.

2015-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* c-auto.in (removed): Unused, replaced ...
	* config.h.in (new): ... by this.
	* configure.ac: Adapted

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-07-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tfm.c: First include <kpathsea/kpathsea.h> via "utils.h".

2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.h: First include <kpathsea/kpathsea.h>.

2013-04-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Fixed a typo.

2012-12-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvicore.c: Drop unused variable (gcc-4.6 warning).

2012-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvipos.c: Pass program name string to kpse_set_program_name.

2012-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvipos.c: Use binary mode for output files.
	* dvicore.c: Cast argument to avoid MSVC compiler warnings.
	From W32TeX.

2011-04-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid 'differ in signedness' warnings.
	dvicore.c (struct a_bbox): Don't declare member tag as unsigned.
	(new_bbox): Don't declare param tag as unsigned.
	(do_pos_special): Casts from 'unsigned char *' to 'char *'.

2010-02-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.h: Revert the last changes from Feb 20 and 23.
	* dvipos.c: Don't #include <getopt.h> with kpathsea or MinGW32.

2010-02-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils.h: Also need to #include <kpathsea/c-ctype.h>.
