@@ -1,3 +1,8 @@
+2021-03-07  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* dvipos.test, Makefile.am:
+	Tweak a test.
+
 2021-02-07  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* dvipos.c:
